# video-process-backend

./: .coverage  .env  .pre-commit-config.yaml  Caddyfile  Dockerfile.test  Makefile  README.md  commands.txt  docker-compose.prod.yml  docker-compose.yml  dockerfile  implementation.tex  pyproject.toml  pytest.ini  redis.conf  reflections_probe.txt  requirements.txt  test_composite_screen.py  test_logging.py
ae_scripts/: export_corner_pin.jsx
app/: main.py  requirements.txt
app/api/: routes.py
app/assets/mockup1/scene1/: corner_pin_data.json  mask.mov
app/assets/mockup1/scene2/: corner_pin_data.json  reflections.mov
app/assets/mockup1/scene3/: corner_pin_data.json  mask.mov
app/config/: __init__.py  exceptions.py  logging.py  mockups.json  redis.py
app/middleware/: correlation.py
app/services/: scene_processor.py  storage.py  timeline_assembler.py
app/services/effects/: __init__.py  basic_operations.py  blending_effects.py  blur_effect.py  perspective_transformations.py  screen_glow.py
app/tasks/: celery_app.py  processing_tasks.py
assets/mockup1/scene2/: mask.mov
report/: golden-master-hashes.txt  newman-run-report.json  performance-result.json
tests/: conftest.py  test_api.py  test_blending_effects.py  test_config_loader.py  test_effects.py  test_perspective_transformations.py  test_scene_processor.py  test_timeline_assembler.py  test_video_processor.py  test_worker.py
tests/perf/: encode_10s.py
tests/postman/: env-local.json  mvp-suite.json
video_process_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
