[project]
name = "video-process-backend"
version = "0.1.0"
description = "Backend for video processing with effects"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "moviepy==1.0.3",
    "opencv-python-headless>=4.8.0",
    "python-multipart>=0.0.6",
    "structlog>=23.2.0",
    "pydantic>=2.4.0",
    "psutil>=5.9.0,<5.10.0",
    "minio>=7.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.10.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "types-redis>=4.6.0",
    "httpx>=0.24.0"
]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.isort]
known-first-party = ["app"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true 